Создание unit тестов для UserServiceImpl, улучшение структуры системы управления заказами